# L2RS

./: .gitignore  CMakeLists.txt  L2RS.c  L2RS.h  entropy.c  entropy.h  main.c  matrix.c  matrix.h  ntt.c  ntt.h  params.h  poly.c  poly.h  precomp.c  reduce.c  reduce.h  sampler.c  sampler.h  sha3.c  sha3.h  tables.c  tables.h
